--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/ChatServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.ChatMessage.jar=C:\\JavaCodes\\JavaFX\\ChatMessage\\dist\\ChatMessage.jar
+file.reference.ChatMessage.jar=..\\ChatMessage\\dist\\ChatMessage.jar
 includes=**
 jar.compress=false
 javac.classpath=\
